# repackage

./: .gitignore  Cargo.toml  NOTICE  README.md  azure-pipelines.yml  deny.toml
src/: lib.rs  main.rs
tests/: crates.rs
tests/test-crates/trivial/: Cargo.toml
tests/test-crates/with-tests/: Cargo.toml
tests/test-crates/with-tests/src/: lib.rs
tests/test-crates/with-tests/tests/: lib.rs
