[package]
name = "repackage"
version = "0.1.0"
authors = ["Jon Gjengset <jongje@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
tar = { version = "0.4.32", default-features = false }
cargo_toml = "0.8.1"
toml = "0.5.6"
flate2 = { version = "1.0.3", default-features = false, features = ["zlib"] }
