[package]
name = "repackage"
version = "0.1.1"
authors = ["Jon Gjengset <jongje@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "An infernal tool to repackage a .crate file under another name"
repository = "https://github.com/jonhoo/repackage"

keywords = ["packaging", "crate", "rename"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
anyhow = "1"
tar = { version = "0.4.32", default-features = false }
cargo_toml = "0.15"
toml = "0.7"
flate2 = { version = "1.0.3", default-features = false, features = ["zlib"] }
